# gemseo-template-editor-gui

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CREDITS.md  CREDITS.rst  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
requirements/: test-python3.10.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9.txt
src/: gemseo_template_editor_gui.py
src/gemseo_template_editor/: __init__.py
tests/: __init__.py  test_open_gui.py
