[project]
name = "gemseo-template-editor-gui"
authors = [
    {name = "GEMSEO team", email = "contact@gemseo.org"}
]
description = "A GUI to create input and output files template for DiscFromExe."
license = {text = "GNU Lesser General Public License v3"}
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
requires-python = ">=3.8, <3.11"
dependencies = [
    "pyside6 >=6.3.0,<=6.4.2",
]

[project.optional-dependencies]
test = [
    "covdefaults",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
dev = [
    "gemseo[all]@git+https://gitlab.com/gemseo/dev/gemseo.git@develop",
]

[project.urls]
Homepage = "https://gitlab.com/gemseo"
Source = "https://gitlab.com/gemseo/dev/gemseo-template-editor-gui"
Tracker = "https://gitlab.com/gemseo/dev/gemseo-template-editor-gui/-/issues"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
license-files = [
    "LICENSE.txt",
    "CREDITS.md",
]

[tool.black]
target-version = ['py38']
